Ensure inline-wrap isn't applied when there's a flow shape.

Also remove it explicitely when it is not necessary.

BUG:517438


(cherry picked from commit 526284d1c4abbb29a9c5637829f077afea470d86)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>